# LocalSqlAgent

./: .gitignore  README.md  agent.py  database.py  main.py  pyproject.toml
