[project]
name = "local-sql-agent"
version = "0.1.0"
description = "Enterprise Local SQL Agent built with LangGraph and Ollama"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "faiss-cpu>=1.13.2",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
